--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Keyboard Switcher",
+    "name": "Typing Lang Switcher",
     "version": "1.0",
-    "description": "Switch between English and Persian keyboards with a shortcut.",
+    "description": "Switch between English and Persian keyboards while typing with a shortcut.",
     "action": {
       "default_popup": "popup.html",
       "default_icon": {
